[package]
name = "better-auth-toasty"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A Toasty ORM database adapter for the better-auth-rs framework."
repository = "https://github.com/benluo/better-auth-toasty"
keywords = ["authentication", "auth", "toasty", "better-auth", "turso"]
categories = ["authentication", "database"]

[dependencies]
better-auth = { version = "0.10", default-features = false, features = [
    "rustls",
] }
better-auth-core = { version = "0.10", default-features = false }
toasty = "0.7"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
